# ArrowPlayground

./: .gitignore  README.md
ArrowDev/: Dockerfile
ArrowDevDbg/: Dockerfile  build.cmd
ArrowDevDbgARM/: Dockerfile
ArrowRsBenchmarks/benchmarks/: Cargo.toml
ArrowRsBenchmarks/benchmarks/src/: main.rs
ArrowRsBenchmarks/cpp_benchmarks/: cpp_benchmarks  main.cc
ColumnReadingPerf/: CMakeLists.txt  ColumnReadingPerf.cc  ColumnReadingPerfDataset.cc  arrow_benchmarks.cc  arrow_benchmarks2.cc  my_metadata_parser.cc  my_metadata_parser.h  parquet_test.py  parquet_test2.py  parquet_types.cpp  parquet_types.h  plot_results.py  polars_test3.py  pyarrow_benchmarks.py  pyarrow_benchmarks_ramfs.csv  results_cpp.csv  results_python.csv
ColumnReadingPerf/Snapshot_2023-10-25/: arrow_benchmarks.cc  plot_results.py  pyarrow_results_ramfs.csv
ColumnReadingPerf/Snapshot_2023-10-26/: README.md  arrow_benchmarks.cc  arrow_results_ramfs.csv  plot_results.py  pyarrow_benchmarks.py  pyarrow_results_ramfs.csv
ColumnReadingPerf/Snapshot_2023-10-31/: README.md  arrow_benchmarks.cc  pyarrow_results.csv
ColumnReadingPerf/Snapshot_2023-11-08/: README.md  arrow_benchmarks.cc  plot_results.py  pyarrow_benchmarks.py  pyarrow_results.csv
ColumnReadingPerf/Snapshot_2023-11-17/: README.md  arrow_benchmarks.cc  pyarrow_results.csv
ColumnReadingPerf/Snapshot_2023-11-21/: arrow_benchmarks.cc  pyarrow_results.csv
ColumnReadingPerfNet/: ColumnReadingPerfNet.sln
ColumnReadingPerfNet/ColumnReadingPerfNet/: ColumnReadingPerfNet.csproj  Program.cs  SingleCandlestickMP.cs
PTPRepro/: PTPRepro.csproj  PTPRepro.sln  Program.cs  README.md  Tester.cs  TesterSettings.cs
ParquetColumnsLinearScaling/: parquet_test.py
RapidParquet/: CMakeLists.txt  rapid_parquet.cc  rapid_parquet.h  rapid_parquet.pc.in  test_rapid_parquet.py
RapidParquet/python/: .gitignore  crapid_parquet.pxd  pyproject.toml  rapid_parquet.cc  rapid_parquet.h  setup.cfg  setup.py
RapidParquet/python/rapid-parquet/: __version__.py
RapidParquet/python/rapidparquet/: __init__.py  __version__.py  core.py  crapid_parquet.pxd  my_cython_code.pyx  rapid_parquet.cc  rapid_parquet.h  rapid_parquet_cython.cpp  rapid_parquet_cython.pyx
SimpleApp1/: CMakeLists.txt  my_example  my_example.cc
libcudf_test/: CMakeLists.txt  main.cpp
