[project]
name = "rapid_parquet_marcin-krystianc"
version = "0.0.1"
authors = [
  { name="Marcin Krystianc", email="marcin.krystianc@gmail.com" },
]
description = "A small package to quickly load parquet metadata"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"